fix: repair JSON data store robustness and make its tests actually run (#19)
* test: make storeData tests assert real behaviour

test_storeData_withValidFiles and test_storeData_fileFiltering swallowed
NullPointerException / ComponentNotFoundException and ended with
assertTrue(true), so they verified nothing.

Register SystemHelper, an initialized CrawlerStatsHelper and a recording
FailureUrlService stub in setUp so the full storeData pipeline runs inside
the test container, then assert the documents the callback actually
receives. This mirrors the setup used by fess-ds-example.

* test: clean up temp dirs and remove ordering assumption in storeData tests

test_storeData_withValidFiles and test_storeData_fileFiltering created a
temp directory per run and never deleted it, leaking jsontest* directories
into the OS temp dir on every test execution. Wrap both in the same
try/finally cleanup already used by the other file-creating tests in this
class.

test_storeData_withValidFiles also asserted the first record in the
callback's list had title "Test", assuming a.json is always processed
before b.jsonl. That order comes from an unspecified File[] listing sorted
by lastModified(), which ties (and becomes unstable) on filesystems with
coarse mtime resolution. Look the record up by its unique url instead of
relying on list position.

Also update the class-level Javadoc, which still described tests as
catching NullPointerException/ComponentNotFoundException because
dependencies "may not be available" - no longer true now that setUp
registers them.

* fix: trim whitespace around comma-separated file and directory paths

"files=/a.json, /b.json" resolved only the first entry: the second became
" /b.json", File#isFile() returned false and the path was dropped with a
misleading "is not found." warning.

Trim each element and skip blank ones for both the files and the
directories parameter.

* fix: skip blank lines instead of recording them as failures

Every blank line in a JSO